...
              />

              {/* Stats */}
              <Stack.Screen
                name="Stats"
                component={StatsScreen}
                options={{ title: 'Your Stats' }}
              />

              {/* Single Phone Mode */}
              <Stack.Screen
                name="Setup"
                component={SetupScreen}
                options={{ title: 'Game Setup' }}
              />
              <Stack.Screen name="Topic" component={TopicScreen} options={{ title: 'Draw!' }} />
              <Stack.Screen
                name="Rating"
                component={RatingScreen}
                options={{ title: 'Rate Drawings' }}
...
